feat(#43): improve first choice texts

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,9 +13,9 @@
     },
     "FIRST_CHOICE": {
         "LETS_GO": "Los geht's!",
-        "WHAT_DO_YOU_WANT_TO_DO": "Möchtest du ein neues Zuhause oder bietest du eins an?",
-        "DISCOVER": "Mein neues Zuhause <strong>entdecken</strong>",
-        "ADVERTISE": "Eine WG oder eine Wohnung <strong>inserieren</strong>",
+        "WHAT_DO_YOU_WANT_TO_DO": "Suchst du ein neues Zuhause oder bietest du eins an?",
+        "DISCOVER": "Mein neues Zuhause <strong>finden</strong>",
+        "ADVERTISE": "Ein WG-Zimmer oder eine Wohnung kostenlos <strong>inserieren</strong>",
         "GENDER": {
             "YOU_ARE": "Eine letzte Angabe",
             "WHY_GENDER": "Um dein Gesuch zu personalisieren",
