--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -15,7 +15,7 @@
         "LETS_GO": "Via!",
         "WHAT_DO_YOU_WANT_TO_DO": "Stai cercando o stai offrendo un alloggio?",
         "DISCOVER": "<strong>Trova</strong> la mia nuova casa",
-        "ADVERTISE": "<strong>Crea</strong> un annuncio per una stanza o un appartamento",
+        "ADVERTISE": "<strong>Crea</strong> un annuncio gratuito per una stanza o un appartamento",
         "GENDER": {
             "YOU_ARE": "Un'ultima informazione",
             "WHY_GENDER": "Per personalizzare la tua ricerca",
