--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -143,8 +143,8 @@
             "SUB_TITLE_REWARD": "Dein Inserat ist jetzt öffentlich und deine Teilnahme an unserem Gewinnspiel* ist registriert",
             "REWARD_LEGAL": "* Information zum Gewinnspiel und Teilnahmebedingungen",
             "DISPLAY": "Inserat ansehen",
-            "SHARE": "Inserat teilen",
-            "APPOINTMENTS": "Trage deine Verfügbarkeit ein"
+            "APPOINTMENTS": "Trage deine Verfügbarkeit ein",
+            "CANDIDATES": "Mitbewohner finden"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Eine letzte Angabe bevor die Publikation",
