--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -143,8 +143,8 @@
             "SUB_TITLE_REWARD": "Your ad is published and you entered our contest*",
             "REWARD_LEGAL": "* Contest details and conditions of participation",
             "DISPLAY": "View ad",
-            "SHARE": "Share ad",
-            "APPOINTMENTS": "Set your availabilities"
+            "APPOINTMENTS": "Set your availabilities",
+            "CANDIDATES": "Find roommates"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "One last info before publishing",
