--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -143,8 +143,8 @@
             "SUB_TITLE_REWARD": "Ton annonce est publiée et tu prendras part à notre concours*",
             "REWARD_LEGAL": "* Les détails du concours et conditions de participation",
             "DISPLAY": "Voir l'annonce",
-            "SHARE": "Partager l'annonce",
-            "APPOINTMENTS": "Fixer tes disponibilités"
+            "APPOINTMENTS": "Fixer tes disponibilités",
+            "CANDIDATES": "Trouver des colocs"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Une dernière info avant la publication",
