--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -143,8 +143,8 @@
             "SUB_TITLE_REWARD": "Il tuo annuncio è stato pubblicato e parteciperai al nostro concorso*",
             "REWARD_LEGAL": "* Dettagli del concorso e condizioni di partecipazione",
             "DISPLAY": "Dai un'occhiata al tuo annuncio",
-            "SHARE": "Condividi l'annuncio",
-            "APPOINTMENTS": "Imposta la tua disponibilità"
+            "APPOINTMENTS": "Imposta la tua disponibilità",
+            "CANDIDATES": "Trova coinquilini"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Un'ultima informazione prima pubblicazione",
