--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -44,7 +44,8 @@
             "EDIT_APPOINTMENTS": "Administrer mes disponibilités",
             "EDIT_ADS": "Modifier mon annonce",
             "CLOSE": "Supprimer mon annonce",
-            "LIMIT_ADS": "Qui peut voir mon annonce?"
+            "LIMIT_ADS": "Qui peut voir mon annonce?",
+            "EXTEND": "Prolonger mon annonce"
         }
     },
     "NEW_AD": {
