--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -428,7 +428,7 @@
             "MY_APPOINTMENTS": "Chat & Termine",
             "MY_BOOKMARKS": "Favoriten",
             "MY_APPLICANTS": "Anfragen",
-            "ADVERTISE": "Inserat inserieren"
+            "ADVERTISE": "Gratis inserieren"
         },
         "AD": {
             "MY_APPOINTMENTS": "Nächste Termine",
